filters in Search in Posts

--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -3,54 +3,84 @@
 
 {% block content_main %}
     <div class="row row-cols-1 row-cols-lg-3">
-        {% for element in query %}
-            {% if query|isinstance:'list' %}
-                {% for e in element %}
-                    <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
-                        <div id="element-{{ e.slug }}" class="card shadow h-100">
-                            <div class="card-header">
-                                <div class="d-flex">
-                                    <span class="col">
-                                        <p class="mb-0 text-muted">#{{ e.id }}</p>
-                                        <p class="mb-0 text-muted">{{ e.author }}</p>
-                                    </span>
-                                    {% if user.is_superuser %}
-                                        <span class="col-auto">
-                                            {% block super_buttons %}
-                                                <div class="btn-group float-end">
-                                                    <a class="btn btn-secondary" href="{{ e.get_absolute_update_url }}">
-                                                        <i class="bi bi-pencil-square"></i> Edit
-                                                    </a>
-
-                                                    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="elementAdminDropdown-{{ e.id }}" data-bs-toggle="dropdown" aria-expanded="false">
-                                                        <span class="visually-hidden">Toggle Dropdown</span>
-                                                    </button>
-                                                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="elementAdminDropdown-{{ e.id }}">
-                                                        <a class="dropdown-item" href="{{ e.get_absolute_admin_update_url }}">
-                                                            <i class="bi bi-pencil-square"></i> Edit in Admin
-                                                        </a>
-                                                    </ul>
-                                                </div>
-                                            {% endblock super_buttons %}
+        {% if not filter %}
+            {% for element in query %}
+                {% if query|isinstance:'list' %}
+                    {% for e in element %}
+                        <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
+                            <div id="element-{{ e.slug }}" class="card shadow h-100">
+                                <div class="card-header">
+                                    <div class="d-flex">
+                                        <span class="col">
+                                            <p class="mb-0 text-muted">#{{ e.id }}</p>
+                                            <p class="mb-0 text-muted">{{ e.author }}</p>
                                         </span>
-                                    {% endif %}
+                                        {% if user.is_superuser %}
+                                            <span class="col-auto">
+                                                {% block super_buttons %}
+                                                    <div class="btn-group float-end">
+                                                        <a class="btn btn-secondary" href="{{ e.get_absolute_update_url }}">
+                                                            <i class="bi bi-pencil-square"></i> Edit
+                                                        </a>
+
+                                                        <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="elementAdminDropdown-{{ e.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+                                                            <span class="visually-hidden">Toggle Dropdown</span>
+                                                        </button>
+                                                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="elementAdminDropdown-{{ e.id }}">
+                                                            <a class="dropdown-item" href="{{ e.get_absolute_admin_update_url }}">
+                                                                <i class="bi bi-pencil-square"></i> Edit in Admin
+                                                            </a>
+                                                        </ul>
+                                                    </div>
+                                                {% endblock super_buttons %}
+                                            </span>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h3 class="card-title text-word-wrap">{% firstof e.title e %}</h3>
+                                    <p class="mb-auto">{% firstof e.description e.body %}</p>
+                                </div>
+                                <div class="card-footer">
+                                    <span class="d-flex">
+                                        <span class="col">
+                                            <a class="card-link" href="{{ e.get_absolute_url }}">Continue Reading</a>
+                                        </span>
+                                    </span>
                                 </div>
                             </div>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
+                        <div id="element-{{ element.slug }}" class="card shadow h-100">
+                            <div class="card-header">
+                                <span class="d-flex">
+                                    <span class="col">
+                                        <p class="mb-0 text-muted">#{{ element.id }}</p>
+                                    </span>
+                                    <span class="col">
+                                        <p class="mb-0 text-muted">{{ element.author }}</p>
+                                    </span>
+                                </span>
+                            </div>
                             <div class="card-body">
-                                <h3 class="card-title text-word-wrap">{% firstof e.title e %}</h3>
-                                <p class="mb-auto">{% firstof e.description e.body %}</p>
+                                <h3 class="card-title text-word-wrap">{% firstof element.title element %}</h3>
+                                <p class="mb-auto">{% firstof element.description element.body %}</p>
                             </div>
                             <div class="card-footer">
                                 <span class="d-flex">
                                     <span class="col">
-                                        <a class="card-link" href="{{ e.get_absolute_url }}">Continue Reading</a>
+                                        <a class="card-link" href="{{ element.get_absolute_url }}">Continue Reading</a>
                                     </span>
                                 </span>
                             </div>
                         </div>
                     </div>
-                {% endfor %}
-            {% else %}
+                {% endif %}
+            {% endfor %}
+        {% else %}
+            {% for element in filter.qs %}
                 <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
                     <div id="element-{{ element.slug }}" class="card shadow h-100">
                         <div class="card-header">
@@ -76,8 +106,8 @@
                         </div>
                     </div>
                 </div>
-            {% endif %}
-        {% endfor %}
+            {% endfor %}
+        {% endif %}
     </div>
 
 {% endblock content_main %}
