--- a/khoBlog/templates/sub_base.html
+++ b/khoBlog/templates/sub_base.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load side_menu_set %}
+{% load project_tags %}
 
 {% block nav %}
     {% sm_setting sides %}
@@ -10,6 +11,19 @@
 {% endblock nav %}
 
 {% block aside %}
+    {% if filter %}
+        <form class="card formcard p-4 mb-2 rounded shadow" method="get">
+            <h4 class="fst-italic">Filters</h4>
+            <div class="text-danger">
+                {{ form.non_field_errors }}
+            </div>
+
+            {% form_get filter.form %}
+
+            <input class="btn btn-primary" type="submit" />
+        </form>
+    {% endif %}
+
     {% sm_setting sides %}
 
     {% block inside_aside %}
