--- a/blog/templates/blog/includes/super_buttons.html
+++ b/blog/templates/blog/includes/super_buttons.html
@@ -22,5 +22,11 @@
         <a class="dropdown-item" href="{{ post.get_absolute_admin_update_url }}">
             <i class="bi bi-pencil-square"></i> Edit in Admin
         </a>
+
+        <div class="dropdown-divider"></div>
+
+        <a class="dropdown-item" href="{{ post.get_absolute_delete_url }}">
+            <i class="bi bi-trash"></i> Delete
+        </a>
     </ul>
 </div>
