--- a/khoBlog/templates/comments/list.html
+++ b/khoBlog/templates/comments/list.html
@@ -1,101 +1,3 @@
-{% load comments %}
-
 <div id="comments">
-    {% for comment in comment_list %}
-        <div>
-            <div id="comment-{{ comment.id }}" class="card mt-2">
-                <div class="card-header">
-                    <h4>
-                        {% if not comment.user and not comment.alias_user and comment.user_name %}
-                            {% if not comment.is_removed or user.is_superuser %}
-                                {{ comment.user_name }}
-                            {% endif %}
-                        {% elif comment.alias_user or comment.user and comment.alias_user %}
-                            {% if user.is_superuser %}
-                                <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
-                                <span class="text-small text-muted">{{ comment.alias_user }}</span>
-                            {% else %}
-                                {% if not comment.is_removed %}
-                                    {{ comment.alias_user }}
-                                {% else %}
-                                    <span class="text-muted">This comment has been removed.</span>
-                                {% endif %}
-                            {% endif %}
-                        {% else %}
-                            {% if user.is_superuser or user.id == comment.user.id %}
-                                <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
-                            {% elif comment.user.owner and user.is_authenticated %}
-                                <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
-                            {% else %}
-                                {{ comment.user }}
-                            {% endif %}
-                        {% endif %}
-
-                        {% if user.is_authenticated %}
-                            <span class="float-end">
-                                {% if user.id == comment.user_id or user.is_superuser %}
-
-                                    <div class="btn-group float-end">
-                                        <a class="btn btn-secondary" href="{% url 'comments:comments-edit' pk=comment.id %}">
-                                            <i class="bi bi-pencil-square"></i> Edit
-                                        </a>
-
-                                        {% if user.is_superuser %}
-                                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="commentActionsDropdown-{{ comment.id }}" data-bs-toggle="dropdown" aria-expanded="false">
-                                                <span class="visually-hidden">Toggle Dropdown</span>
-                                            </button>
-
-                                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="commentActionsDropdown-{{ comment.id }}">
-                                                    {% if comment.is_public == False %}
-                                                        <a class="dropdown-item" href="{% url 'comments-approve' comment_id=comment.id %}">
-                                                            <i class="bi bi-check2-square"></i> Approve
-                                                        </a>
-                                                    {% endif %}
-
-                                                    <a class="dropdown-item" href="{% url 'admin:comments_customcomment_change' object_id=comment.id %}">
-                                                        <i class="bi bi-pencil-square"></i> Edit in Admin
-                                                    </a>
-                                            </ul>
-                                        {% endif %}
-                                    </div>
-                                {% endif %}
-                            </span>
-                        {% endif %}
-                    </h4>
-                    <p class="text-muted text-small mb-0">
-                        <span>{{ comment.submit_date|date:'l, d F Y' }}</span>
-                        -
-                        <span>
-                            <a href="{% get_comment_permalink comment '#comment-%(id)s' %}">
-                                <i class="bi bi-link-45deg"></i> Permalink
-                            </a>
-                        </span>
-                    </p>
-                </div>
-                <div class="card-body">
-                    {% autoescape on %}
-                        {% if not comment.is_removed and comment.title or comment.is_removed %}
-                            <h5>
-                                {% if comment.title %}
-                                    {{ comment.title }}
-                                {% elif comment.is_removed %}
-                                    <span class="text-muted">This comment has been removed.</span>
-                                    {% if comment.title and user.is_superuser %}
-                                        <span class="text-small text-muted">{{ comment.title }}</span>
-                                    {% endif %}
-                                {% endif %}
-                            </h5>
-                        {% endif %}
-                        <span class="card-text">
-                            {% if not comment.is_removed %}
-                                {{ comment.comment }}
-                            {% elif user.is_superuser %}
-                                <span class="text-small text-muted">{{ comment.comment }}</span>
-                            {% endif %}
-                        </span>
-                    {% endautoescape %}
-                </div>
-            </div>
-        </div>
-    {% endfor %}
+    {% include 'blog/includes/post_comments_base.html' %}
 </div>
