--- a/blog/templates/blog/post_card_in_lists.html
+++ b/blog/templates/blog/post_card_in_lists.html
@@ -1,12 +1,20 @@
 {% extends 'blog/base_post_card.html' %}
+{% load read_time %}
 
 {% block card_div %}
     <div id="post-{{ post.slug }}" class="card shadow h-100">
 {% endblock card_div %}
 
 {% block card_body %}
-    <h3 class="card-title text-word-wrap mb-0">{{ post.title }}</h3>
+    <h3 class="card-title text-word-wrap mb-0">{{ post.title|truncatewords_html:7 }}</h3>
     <div>{% include 'blog/includes/post_dates.html' %}</div>
+    <p class="mb-0 text-small text-muted">
+        {% if not body %}
+            {{ post.body|readtime }}
+        {% else %}
+            A while
+        {% endif %}
+    </p>
     <p class="mb-auto">{{ post.description }}</p>
 {% endblock card_body %}
 
