compress CSS maybe can save a lil

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -86,11 +86,13 @@
 
         <!-- rel! Fonts / Icons -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+        {% compress css %}
+            <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
-        <!-- rel! Themes -->
-        <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}">
-        <link rel="stylesheet" href="{% static 'khoBlog/css/main.css' %}">
+            <!-- rel! Themes -->
+            <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}">
+            <link rel="stylesheet" href="{% static 'khoBlog/css/main.css' %}">
+        {% endcompress css %}
     {% endblock rel %}
 
     {% if not debug_flag %}
