projects list following common template

--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -49,7 +49,7 @@
                     <div class="card-footer">
                         <span class="d-flex">
                             <span class="col">
-                                <a class="card-link" href="{{ page.get_absolute_url }}">Check the Page</a>
+                                <a class="card-link" href="{{ page.get_absolute_url }}">See details</a>
                             </span>
                         </span>
                     </div>
