--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -1,4 +1,4 @@
-{% load static socialaccount default_app_theme_set footer_set sitetree compress analytical google_analytics_gtag version %}
+{% load static socialaccount default_app_theme_set footer_set sitetree compress analytical google_analytics_gtag %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
